# multistage_docker

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
hello_world/: main.py
tests/: hello_world.py
