[tool.poetry]
name = "multistage-docker"
version = "0.1.0"
description = ""
authors = ["Hannes De Smet <hannes.desmet@dataminded.be>"]
readme = "README.md"
packages = [{ include = "hello_world" }, ]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^7.0.0"
types-conveyor = "^0.0.6"
pre-commit = "3.2.1"
pytest = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
